--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@ h3 {
 p {
   color: rgb(5, 113, 117);
 }
+
+/* -------------------------- */
+
+body {
+  padding: 20px;
+  border: 5px solid violet;
+}
